--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/Ecommerce
+spring.datasource.username=root
+spring.datasource.password=R@myaTrust12345
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
